--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-simple-captcha": "^9.3.0",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
