--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-parallax-component": "^1.0.6",
     "react-router-dom": "^6.20.0",
     "react-simple-captcha": "^9.3.0",
     "sort-by": "^1.2.0",
