--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-parallax-component": "^1.0.6",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.20.0",
     "react-simple-captcha": "^9.3.0",
     "sort-by": "^1.2.0",
