--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-parallax-component": "^1.0.6",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.20.0",
     "react-simple-captcha": "^9.3.0",
+    "reactive-button": "^1.3.15",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
