--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-parallax-component": "^1.0.6",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "react-simple-captcha": "^9.3.0",
     "reactive-button": "^1.3.15",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
