--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-paginate": "^8.2.0",
     "react-parallax-component": "^1.0.6",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.20.0",
